--- a/css/master.css
+++ b/css/master.css
@@ -40,3 +40,24 @@ a:hover { color: dodgerBlue; }
   font-style: italic;
   font-family: Baskerville, "Palatino Linotype", "calluna-1", "calluna-2", serif;
 }
+
+footer {
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+}
+
+footer ul, footer li {
+  list-style: none;
+  display: inline-block;
+  margin: 50px 0;
+  padding: 0 10px 0 0;
+}
+
+footer a {
+  color: #5C6058;
+  font-weight: normal;
+}
+
+footer a:hover {
+  color: darkSlateGray;
+}
