--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,3 +1,3 @@
-<div id="status" class="logo">
-  <img src="/images/logo.png" alt="" height="150" width="150"/>
+<div id="logo">
+  <img src="/images/logo.png" alt=""/>
 </div>
