--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -7,12 +7,11 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
-    <div id="page">
-      <div id="header">
-        {% include logo.html %}
-        <div id="logotype">
-          <h1>Phillip Ridlen</h1>
-        </div>
+    <header>
+      {% include logo.html %}
+      <div id="logotype">
+        <h1>Phillip Ridlen</h1>
+      </div>
       </div>
       {{ content }}
     </div>
