--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -14,6 +14,16 @@
       </div>
       </div>
       {{ content }}
-    </div>
+    </header>
+    <footer>
+      copyright twenty-eleven phillip ridlen. //
+      <ul>
+        <li><a href="http://notes.philtr.net">blog</a></li>
+        <li><a href="http://twitter.com/philtr">twitter</a></li>
+        <li><a href="http://github.com/philtr">github</a></li>
+        <li><a href="http://forrst.me/philtr">forrst</a></li>
+        <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
