add link to more

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -23,6 +23,7 @@
         <li><a href="http://github.com/philtr">github</a></li>
         <li><a href="http://forrst.me/philtr">forrst</a></li>
         <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
+        <li><a href="http://philtr.net/">more</a></li>
       </ul>
     </footer>
   </body>
