--- a/css/master.css
+++ b/css/master.css
@@ -1,11 +1,79 @@
-a{text-decoration:none;color:#2F4F4F;font-weight:bold;}
-a:hover{color:#3A7878;}
-body{margin:0 auto;width:850px;padding-top:75px;}
-html{background:#EAECDF url('/images/bg.jpg') top center no-repeat;color:#5C6058;font:300 14px/18px "calluna-1","calluna-2","Times","Times New Roman",serif;height:100%;margin:0;width:100%;}
-h1{color:#2F4F4F;text-indent:0;font-family:"bello-pro-1","bello-pro-2",sans-serif;font-size:70px;line-height:1;margin:0;text-shadow:2px 2px 1px white;}
-footer{font-size:13px;margin-top:175px;text-shadow:1px 1px 0px white;}
-footer a{font-weight:normal;}
-footer ul,footer li{list-style:none;display:inline-block;padding:0 3px 0 0;}
-#logo{float:right;position:relative;top:-10px;}
-#intro{font-size:32px;line-height:48px;margin-top:75px;text-shadow:1px 1px 0px white;}
-.amp{font-style:italic;font-family:Baskerville,"Palatino Linotype","calluna-1","calluna-2",serif;}
+html {
+  background: #EAECDF url('/images/bg.jpg') top center no-repeat;
+  color: #5C6058;
+  font: 300 14px/18px "calluna-1","calluna-2","Times","Times New Roman",serif;
+  height: 100%;
+  margin: 0;
+  width: 100%; }
+
+  body {
+    margin: 0 auto;
+    width: 850px;
+    padding-top: 75px; }
+
+    a {
+      text-decoration: none;
+      color: #2F4F4F;
+      font-weight: bold; }
+    a:hover { color: #3A7878; }
+    
+    .amp {
+      font-style: italic;
+      font-family: Baskerville,"Palatino Linotype","calluna-1","calluna-2",serif; }
+
+    h1 {
+      color: #2F4F4F;
+      text-indent: 0;
+      font-family: "bello-pro-1","bello-pro-2",sans-serif;
+      font-size: 70px;
+      line-height: 1;
+      margin: 0;
+      text-shadow: 2px 2px 1px white; }
+    
+    #logo {
+      float: right;
+      position: relative;
+      top: -10px; }
+    
+    #intro {
+      font-size: 32px;
+      line-height: 48px;
+      margin-top: 75px;
+      text-shadow: 1px 1px 0px white; }
+      
+    label { 
+      clear: left;
+      display: block;
+      float: left;
+      font-size: 18px;
+      width: 150px; }      
+    input, textarea, button {
+      font-family: "calluna-1","calluna-2","Times","Times New Roman",serif; 
+      font-size: 18px; }
+    textarea { height: 300px; width: 600px; }
+    form p { margin: 1em 0 0 0; }
+    form p.actions { margin: 0 0 0 150px;}
+    button {
+      padding: 5px 10px 0 10px;
+      color: #5C6058;
+      cursor: pointer;
+      border: 1px solid #D4D4D4;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      background: #F4F4F4;
+      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#F4F4F4',endColorstr='#EAECDF');
+      background: -webkit-gradient(linear,left top,left bottom,from(#F4F4F4),to(#EAECDF));
+      background: -moz-linear-gradient(top,#F4F4F4,#EAECDF);
+      text-shadow: 1px 1px 0 white; }
+    
+    footer {
+      clear: left;
+      font-size: 13px;
+      margin-top: 175px;
+      text-shadow: 1px 1px 0px white; }
+    footer a { font-weight: normal;}
+    footer ul,footer li {
+      list-style: none;
+      display: inline-block;
+      padding: 0 3px 0 0; }
