link header to home

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -10,7 +10,7 @@
     <header>
       {% include logo.html %}
       <div id="logotype">
-        <h1>Phillip Ridlen</h1>
+        <h1><a href="/">Phillip Ridlen</a></h1>
       </div>
       </div>
       {{ content }}
