--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet/less" type="text/css" href="/less/main.less" />
-    <script src="/js/less.js" type="text/javascript"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>{{ page.title }} | philtr.net</title>
+
+    <link rel="stylesheet/less" type="text/css" href="/less/main.less" />
+    <script src="/js/less.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="http://use.typekit.com/hcg3lre.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
+    <h1>Phillip's Notes and Things</h1>
     {{ content }}
   </body>
 </html>
