--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>{{ page.title }} | philtr.net</title>
 
-    <link rel="stylesheet/less" type="text/css" href="/less/main.less" />
-    <script src="/js/less.js" type="text/javascript"></script>
+    <link rel="stylesheet/less" type="text/css" href="/notes/less/main.less" />
+    <script src="/notes/js/less.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="http://use.typekit.com/hcg3lre.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
