change filename to see if that fixes github problem

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>{{ page.title }} | philtr.net</title>
 
-    <link rel="stylesheet/less" type="text/css" href="/notes/less/main.less" />
+    <link rel="stylesheet/less" type="text/css" href="/notes/less/main.css" />
     <script src="/notes/js/less.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="http://use.typekit.com/hcg3lre.js"></script>
