touch things up

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>{{ page.title }} | Phillip's Notes and Things</title>
+    <title>{{ page.title }} | Phillip's Notes, Quotes, and Other Miscellany</title>
 
     <link rel="stylesheet/less" type="text/css" href="/less/main.less" />
     <script src="/js/less.js" type="text/javascript"></script>
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1 id="title"><img src="/img/me.png"/><a href="/"><span class="p">Phillip&rsquo;s</span> Notes <span class="f">and</span> Things</a></h1>
+      <h1 id="title"><img src="/img/me.png"/><a href="/"><span class="p">Phillip&rsquo;s</span> Notes, Quotes, <span class="f">and</span> Other Miscellany</a></h1>
     </header>
     {{ content }}
     <footer>
