--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -18,7 +18,7 @@
     <footer>
       copyright twenty-eleven phillip ridlen. //
       <ul>
-        <li><a href="http://notes.philtr.net">blog</a></li>
+        <li><a href="http://blog.phillipridlen.com">blog</a></li>
         <li><a href="http://twitter.com/philtr">twitter</a></li>
         <li><a href="http://github.com/philtr">github</a></li>
         <li><a href="http://forrst.me/philtr">forrst</a></li>
