float my image off to the left

--- a/less/main.less
+++ b/less/main.less
@@ -103,7 +103,7 @@ h1#title { .dividerBottom;
   font-size: @bigheading * .6;
   text-align: center;
   text-transform: uppercase;
-  img { line-height: 0; }
+  img { float: left; margin-left: -100px; }
   a:hover { background-color: @bgcolor; }
   .p {
     color: @textcolor;
