--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <footer>
       <p>Except where otherwise noted, content on this site is released
      under a <a href="http://d.spt.la/OmKS">Creative Commons</a> license.
-     <br />Powered by <a href="http://jekyllrb.com">jekyll</a>.</p>
+     Powered by <a href="http://jekyllrb.com">jekyll</a>.</p>
     </footer>
   </body>
 </html>
