--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,7 @@
 @display: @sans;
 @code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
 @basefont: 14px;
+@padding: @basefont * 2;
 @bigheading: @basefont * 2.75;
 @lineheight: @basefont * 2.25;
 
@@ -34,10 +35,12 @@
   text-shadow: @size @size 0px #fff;}
 .dividerBottom { 
   border-bottom: 1px solid @bordercolor; 
-  padding-bottom: @bigheading * .75; }
+  margin-bottom: @padding;
+  padding-bottom: @padding; }
 .dividerTop {
-  border-top: 1px solid @bordercolor; 
-  padding-top: @bigheading * .75; }
+  border-top: 1px solid @bordercolor;
+  margin-top: @padding;
+  padding-top: @padding; }
 
 // Structure & Formatting
 html { margin: 0; padding: 0; }
@@ -82,9 +85,17 @@ article { .dividerBottom;
     font-weight: 100;
     letter-spacing: 0;
     margin-bottom: @basefont; }
-  aside { .dividerTop;
+  p:last-child { margin-bottom: 0; }
+  &:last-child { 
+    border-bottom: none; 
+    margin-bottom: 0; }
+  aside { .dividerTop; .dividerBottom;
     color: @bgcolor - #777; 
     font-style: italic; }
+  aside + aside {
+    border-top: none;
+    margin-top: 0;
+    padding-top: 0; }
   &.video {
     iframe { height: 400px; width: 550px; }}
   &:before {
@@ -96,7 +107,6 @@ article { .dividerBottom;
   &.photo:before { content: url('/img/photo.png'); }
   &.quote:before { content: url('/img/quote.png'); }
   &.video:before { content: url('/img/video.png'); }}
-footer { padding-top: @bigheading * .75; }
   
 // Specific styles
 h1#title { .dividerBottom;
@@ -108,7 +118,8 @@ h1#title { .dividerBottom;
   .p {
     color: @textcolor;
     display: block;
-    font-size: @bigheading * 1.75 }
+    font-size: @bigheading * 1.75;
+    letter-spacing: -2px; }
   .f {
     color: @accent2;
     font-family: @serif;
@@ -116,3 +127,6 @@ h1#title { .dividerBottom;
     font-style: italic;
     font-weight: 100;
     text-transform: lowercase; } }
+
+#posts { .dividerBottom; padding-bottom: 0; }
+#post article { padding-bottom: 0; }
