--- a/less/main.less
+++ b/less/main.less
@@ -107,6 +107,7 @@ article { .dividerBottom;
   &.photo:before { content: url('/img/photo.png'); }
   &.quote:before { content: url('/img/quote.png'); }
   &.video:before { content: url('/img/video.png'); }}
+footer { clear: both; }
   
 // Specific styles
 h1#title { .dividerBottom;
@@ -130,3 +131,6 @@ h1#title { .dividerBottom;
 
 #posts { .dividerBottom; padding-bottom: 0; }
 #post article { padding-bottom: 0; }
+.older { float: left; }
+.newer { float: right; }
+.older a, .newer a { color: @accent2; }
