--- a/less/main.less
+++ b/less/main.less
@@ -107,7 +107,7 @@ article { .dividerBottom;
   &.photo:before { content: url('/img/photo.png'); }
   &.quote:before { content: url('/img/quote.png'); }
   &.video:before { content: url('/img/video.png'); }}
-footer { clear: both; }
+footer { font-family: @sans; clear: both; }
   
 // Specific styles
 h1#title { .dividerBottom;
