add some serifs back in

--- a/less/main.less
+++ b/less/main.less
@@ -9,7 +9,7 @@
 
 //Fonts & Metrics
 @sans: "proxima-nova-1", "proxima-nova-2", sans-serif;
-@serif: "adobe-text-pro-1", "adobe-text-pro-2", serif;
+@serif: "Palatino","Palatino Linotype","URW Palladio L", serif;
 @copy: @sans;
 @display: @sans;
 @code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
@@ -91,6 +91,7 @@ article { .dividerBottom;
     margin-bottom: 0; }
   aside { .dividerTop; .dividerBottom;
     color: @bgcolor - #777; 
+    font-family: @serif;
     font-style: italic;
     font-weight: 100; }
   aside + aside {
