--- a/less/main.less
+++ b/less/main.less
@@ -133,6 +133,19 @@ h1#title {
     font-style: italic;
     font-weight: 100;
     text-transform: lowercase; } }
+h1#draft {
+  color: @accent1;
+  font-size: 200px;
+  left: -200px;
+  position: absolute;
+  top: 100px;
+  -moz-text-shadow: -3px 2px 1px #fff;
+  -webkit-text-shadow: -3px 2px 1px #fff;
+  text-shadow: -3px 2px 1px #fff;
+  text-transform: uppercase;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  transform: rotate(-90deg); }
 
 #posts { .dividerBottom; padding-bottom: 0; }
 #post article { padding-bottom: 0; }
