--- a/less/main.less
+++ b/less/main.less
@@ -135,10 +135,10 @@ h1#title {
     text-transform: lowercase; } }
 h1#draft {
   color: @accent1;
+  float: left;
   font-size: 200px;
-  left: -200px;
-  position: absolute;
-  top: 100px;
+  line-height: 0;
+  margin: 150px 0 -200px -525px;
   -moz-text-shadow: -3px 2px 1px #fff;
   -webkit-text-shadow: -3px 2px 1px #fff;
   text-shadow: -3px 2px 1px #fff;
