add sadface for lt IE 9

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,17 @@
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
+    <!--[if lt IE 9]>
+      <style type="text/css">
+        body { text-align: center; }
+        #sadface { font-size: 400px; line-height: 1.2em; }
+      </style>
+      <div id="sadface">:'(</div>
+      <p><a href="http://firefox.com">Get Mozilla Firefox</a></p>
+      <p><a href="http://google.com/chrome">Get Google Chrome</a></p>
+    <![endif]-->
+    <!--[if (gte IE 9)|!(IE)]><!-->
+
     <header>
       <h1 id="title"><img src="/img/me.png"/><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
     </header>
@@ -24,5 +35,7 @@
      View the <a href="https://github.com/philtr/notes">source on Github</a>.
      Powered by <a href="http://jekyllrb.com">jekyll</a>.</p>
     </footer>
+
+    <!--<![endif]-->
   </body>
 </html>
