--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip's Notes, Quotes, and Other Miscellany</title>
 
-    <link rel="stylesheet/less" type="text/css" href="/less/main.less" />
-    <script src="/js/less.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/css/main.css" />
 
     <script type="text/javascript" src="http://use.typekit.com/hcg3lre.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
