update non-comments wording

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,11 +23,11 @@ layout: default
     {% endif %}
 
     <aside>
-      I don't have comments implemented currently, but I'd like to
-      encourage feedback. Feel free to send an email to <a
-      href="mailto:p@rdln.net">p@rdln.net</a> or shoot a quick reply to <a
-      href="http://twitter.com/philtr">@philtr</a> on Twitter. I'll update
-      this post with any insightful, interesting, or corrective comments.
+      If you have any comments or concerns, feel free to send an email
+      to <a href="mailto:p@rdln.net">p@rdln.net</a> or mention <a
+      href="http://twitter.com/philtr">@philtr</a> on Twitter. I'll
+      update this post with any insightful, interesting, or corrective
+      comments.
     </aside>
   </article>
 </section>
