separate less files out

--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,10 @@ h2{-webkit-text-shadow:2px 2px 0px #ffffff;-moz-text-shadow:2px 2px 0px #ffffff;
 h3{-webkit-text-shadow:2px 2px 0px #ffffff;-moz-text-shadow:2px 2px 0px #ffffff;text-shadow:2px 2px 0px #ffffff;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;line-height:1;font-size:19.25px;}
 p{margin:0 0 14px 0;}
 a{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;color:#21b080;text-decoration:none;}a:hover{background:#dbf9fe;color:#e71a5d;}
-pre{background:#dbf9fe;font-family:"Inconsolata","Consolas","Menlo","Monaco",monospace;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #4c9cb2;overflow-x:auto;padding:14px;}pre::-webkit-scrollbar{width:5px;height:5px;margin:14px;}
+pre{background:#dbf9fe;font-family:"Inconsolata","Consolas","Menlo","Monaco",monospace;-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;border:1px solid #4c9cb2;overflow-x:auto;padding:14px;}pre::-webkit-scrollbar{height:5px;margin:14px;width:5px;}
 pre::-webkit-scrollbar-track{background-color:rgba(76, 156, 178, 0.3);border-radius:3px;}
-pre::-webkit-scrollbar-thumb{border-radius:3px;background-color:rgba(76, 156, 178, 0.5);}
-pre code{-webkit-border-radius:0px;-moz-border-radius:0px;border-radius:0px;background:none;padding:0;}
+pre::-webkit-scrollbar-thumb{background-color:rgba(76, 156, 178, 0.5);border-radius:3px;}
+pre code{background:none;padding:0;}
 code{background:#dbf9fe;font-family:"Inconsolata","Consolas","Menlo","Monaco",monospace;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;font-size:13px;padding:2px;}
 blockquote{font-size:125%;font-style:italic;}blockquote code{font-style:normal;}
 article{border-bottom:1px solid #dedede;margin-bottom:28px;padding-bottom:28px;}article h2{margin-bottom:0;padding-bottom:0;}
