--- a/_less/main.less
+++ b/_less/main.less
@@ -1,158 +1,5 @@
-// Colors
-@bgcolor: #F7F7F7;
-@textcolor: #264E59;
-@linkcolor: #21B080;
-@accent1: #F8C02C;
-@accent2: #E71A5D;
-@highlight: #DBF9FE;
-@bordercolor: @bgcolor - #191919;
+@import url(colors.less);
+@import url(fonts.less);
+@import url(mixins.less);
 
-//Fonts & Metrics
-@sans: "proxima-nova-1", "proxima-nova-2", sans-serif;
-@serif: "Palatino","Palatino Linotype","URW Palladio L", serif;
-@copy: @sans;
-@display: @sans;
-@code: "Inconsolata", "Consolas", "Menlo", "Monaco", monospace;
-@basefont: 14px;
-@padding: @basefont * 2;
-@bigheading: @basefont * 2.75;
-@lineheight: @basefont * 2.25;
-
-//Mixins
-.heading { .letterpress(2px);
-  font-family: @display;
-  line-height: 1;}
-.code {
-  background: @highlight;
-  font-family: @code;}
-.rounded-corners(@radius: 5px) {
-  -webkit-border-radius: @radius;
-  -moz-border-radius: @radius;
-  border-radius: @radius;}
-.letterpress(@size: 1px) {
-  -webkit-text-shadow: @size @size 0px #fff;
-  -moz-text-shadow: @size @size 0px #fff;
-  text-shadow: @size @size 0px #fff;}
-.dividerBottom { 
-  border-bottom: 1px solid @bordercolor; 
-  margin-bottom: @padding;
-  padding-bottom: @padding; }
-.dividerTop {
-  border-top: 1px solid @bordercolor;
-  margin-top: @padding;
-  padding-top: @padding; }
-
-// Structure & Formatting
-html { margin: 0; padding: 0; }
-body { .letterpress;
-  background: @bgcolor;
-  color: @textcolor;
-  font-family: @copy;
-  font-size: @basefont;
-  line-height: @lineheight;
-  margin: @basefont*3 auto;
-  max-width: 550px;}
-h1 { .heading; font-size: @bigheading; }
-h2 { .heading; font-size: @bigheading * .67; }
-h3 { .heading; font-size: @bigheading * .5; }
-p { margin: 0 0 @basefont 0; }
-a { .rounded-corners(3px);
-  color: @linkcolor;
-  text-decoration: none;
-  &:hover { 
-    background: @highlight; 
-    color: @accent2; } }
-pre { .code; .rounded-corners;
-  border: 1px solid @textcolor*2;
-  overflow-x: auto;
-  padding: @basefont;
-  &::-webkit-scrollbar { width: 5px; height: 5px; margin: @basefont; }
-  &::-webkit-scrollbar-track { background-color: rgba(76, 156, 178,0.3); border-radius: 3px; }
-  &::-webkit-scrollbar-thumb { border-radius: 3px; background-color: rgba(76, 156, 178,0.5); }
-  code { .rounded-corners(0px); background: none; padding: 0; } }
-code { .code; .rounded-corners(2px);
-  font-size: @basefont - 1px;
-  padding: 2px; }
-blockquote { 
-  font-size: 125%;
-  font-style: italic; 
-  code { font-style: normal; } }
-article { .dividerBottom;
-  h2 { 
-    margin-bottom: 0; 
-    padding-bottom: 0; }
-  time { 
-    color: @accent2;
-    display: block;
-    font-family: @display;
-    font-size: @bigheading * .5;
-    font-weight: 100;
-    letter-spacing: 0;
-    margin-bottom: @basefont; }
-  p:last-child { margin-bottom: 0; }
-  &:last-child { 
-    border-bottom: none; 
-    margin-bottom: 0; }
-  aside { .dividerTop; .dividerBottom;
-    color: @bgcolor - #777; 
-    font-family: @serif;
-    font-style: italic;
-    font-weight: 100; }
-  aside + aside {
-    border-top: none;
-    margin-top: 0;
-    padding-top: 0; }
-  &.video {
-    iframe { height: 400px; width: 550px; }}
-  &:before {
-    float: left;
-    margin-left: -48px;
-    margin-top: 8px; }
-  &.blog:before  { content: url('/img/blog.png'); }
-  &.link:before  { content: url('/img/link.png'); }
-  &.photo:before { content: url('/img/photo.png'); }
-  &.quote:before { content: url('/img/quote.png'); }
-  &.video:before { content: url('/img/video.png'); }}
-footer { font-family: @sans; clear: both; }
-  
-// Specific styles
-h1#title {
-  font-size: @bigheading * .6;
-  margin-bottom: 2 * @padding;
-  text-align: center;
-  text-transform: uppercase;
-  img { float: left; margin-left: -100px; }
-  a:hover { background-color: @bgcolor; }
-  .p { .dividerBottom;
-    color: @textcolor;
-    display: block;
-    font-size: @bigheading * 1.75;
-    letter-spacing: -2px;
-    margin-bottom: 10px;
-    padding-bottom: 4px; }
-  .f {
-    color: @accent2;
-    font-family: @serif;
-    font-size: @bigheading * .4;
-    font-style: italic;
-    font-weight: 100;
-    text-transform: lowercase; } }
-h1#draft {
-  color: @accent1;
-  float: left;
-  font-size: 200px;
-  line-height: 0;
-  margin: 150px 0 -200px -525px;
-  -moz-text-shadow: -3px 2px 1px #fff;
-  -webkit-text-shadow: -3px 2px 1px #fff;
-  text-shadow: -3px 2px 1px #fff;
-  text-transform: uppercase;
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  transform: rotate(-90deg); }
-
-#posts { .dividerBottom; padding-bottom: 0; }
-#post article { padding-bottom: 0; }
-.older { float: left; }
-.newer { float: right; }
-.older a, .newer a { color: @accent2; }
+@import url(notes.less);
