add contact form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,13 @@
 
     <link rel="stylesheet" href="/css/main.css" />
 
-    <script type="text/javascript" src="http://use.typekit.com/hcg3lre.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script src="http://code.jquery.com/jquery-1.6.min.js"></script>
+    <script type="text/javascript">
+      {% include js/contact.js %}
+    </script>
+
+    <script src="http://use.typekit.com/hcg3lre.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     <!--[if lt IE 9]>
