update contact form

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -22,5 +22,6 @@
       </tr>
     </table>
     <input type="submit" value="Send message" />
+    or <a href="{{ page.url }}" id="cancel_email">Cancel</a>
   </form>
 </aside>
