--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ h1#draft{color:#f8c02c;float:left;font-size:200px;line-height:0;margin:150px 0 -
 .older{float:left;}
 .newer{float:right;}
 .older a,.newer a{color:#e71a5d;}
-#contact{display:none;}#contact table{width:100%;}
-#contact label{color:#264e59;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-style:normal;font-weight:bold;line-height:1;}
+#contact{color:#264e59;display:none;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-style:normal;font-weight:bold;}#contact table{width:100%;}
+#contact label{line-height:1;}
 #contact input[type="text"],#contact textarea{-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;border:1px solid #ddd;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;padding:6px;}
 #contact input[type="text"]{width:90%;}
 #contact textarea{height:125px;width:95%;}
