--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
       If you have any comments or concerns, feel free to <a
       id="send_email" href="mailto:{{ site.email }}">send an email to
       {{ site.email }}</a> or mention <a
-      href="http://twitter.com/philtr">@philtr</a> on Twitter. I'll
+      href="http://twitter.com/?status=%40philtr">@philtr</a> on Twitter. I'll
       update this post with any insightful, interesting, or corrective
       comments.
     </aside>
