--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <footer>
       <p>Except where otherwise noted, content on this site is released
      under a <a href="http://d.spt.la/OmKS">Creative Commons</a> license.
-     View the <a href="https://github.com/philtr/notes">source on Github</a>.
+     View the <a href="https://github.com/philtr/notes">source on GitHub</a>.
      Powered by <a href="http://jekyllrb.com">jekyll</a>.</p>
     </footer>
